--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Akash J",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "validator": "^13.15.15"
   }
 }
