--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tinder for Dev",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [
     "NodeJS",
